[gd_scene load_steps=5 format=3 uid="uid://brk6pe1mqx36n"]

[ext_resource type="Script" path="res://scenes/main_menu/version_label.gd" id="1_s1lxo"]
[ext_resource type="Script" path="res://scenes/main_menu/menu_options.gd" id="2_xaiuv"]
[ext_resource type="AudioStream" uid="uid://nae25xj2of8v" path="res://assets/sounds/switch_006.ogg" id="5_uxbfp"]
[ext_resource type="AudioStream" uid="uid://ce2e610h5dh5g" path="res://assets/sounds/rollover5.ogg" id="6_84hyy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -35.0
offset_top = -30.0
offset_right = 1955.0
offset_bottom = 1110.0
color = Color(0.227451, 0.368627, 0.521569, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.5
offset_top = 93.0
offset_right = 65.5
offset_bottom = 135.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "YOUR GAME"
horizontal_alignment = 1

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 156.0
offset_right = 59.5
offset_bottom = 182.0
grow_horizontal = 2
text = "A game by YOU"

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -140.0
offset_right = -32.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
text = "CONTROLS
Move: WASD | Accept: J | Cancel: K | Pause: P
Move: Arrow Keys | Accept: Z | Cancel: Z | Pause: Esc
Gamepads work too!"
horizontal_alignment = 2

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -134.0
offset_right = 340.0
offset_bottom = -30.0
grow_vertical = 0
text = "INSTRUCTIONS
Collect all the things!"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 21.0
offset_right = -32.0
offset_bottom = 47.0
grow_horizontal = 0
text = "Version: [set dynamically]"
horizontal_alignment = 2
script = ExtResource("1_s1lxo")

[node name="DebugUIStatus" type="Label" parent="." groups=["debug_ui"]]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 23.0
offset_right = 162.0
offset_bottom = 49.0
text = "Debug UI enabled"

[node name="MenuOptions" type="VFlowContainer" parent="." node_paths=PackedStringArray("shortcut_context")]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = 192.0
offset_right = 36.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("Start")
alignment = 1
script = ExtResource("2_xaiuv")

[node name="Start" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Quit"

[node name="Over" type="AudioStreamPlayer2D" parent="MenuOptions"]
position = Vector2(-925, -192)
stream = ExtResource("6_84hyy")

[node name="EnterSFX" type="AudioStreamPlayer2D" parent="MenuOptions"]
position = Vector2(-925, -192)
stream = ExtResource("5_uxbfp")

[connection signal="focus_entered" from="MenuOptions" to="MenuOptions" method="_on_focus_entered"]
[connection signal="mouse_entered" from="MenuOptions/Start" to="MenuOptions" method="_on_button_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Start" to="MenuOptions" method="_on_start_pressed"]
[connection signal="mouse_entered" from="MenuOptions/Settings" to="MenuOptions" method="_on_button_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Settings" to="MenuOptions" method="_on_settings_pressed"]
[connection signal="mouse_entered" from="MenuOptions/Quit" to="MenuOptions" method="_on_button_mouse_entered"]
[connection signal="pressed" from="MenuOptions/Quit" to="MenuOptions" method="_on_quit_pressed"]
